js/js.translator/testData/incremental/invalidation/interfaceSuperUsage/main/test.0.kt
private fun testClassA(): Int {
    konst a = ClassA()
    a.someVar = 0
    return a.someVar!!
}

fun test(): Int {
    return testClassA()
}
